data/derived/sp14/progs/unify/prog4459.ml.out
Characters 85-86:
  | Sine u -> pi *. (eval u)
                          ^
Error: This expression has type expr but an expression was expected of type
         expr * 'a * 'a
